--- a/eta_carinae.css
+++ b/eta_carinae.css
@@ -1,19 +1,12 @@
+div.center {
+    display: flex;
+    flex-flow: row wrap;
+    align-content: space-around;
+} 
+
 body
 {
 font: "Trebuchet MS", Verdana, sans-serif;
 background-color: #5c87b2;
 color: #696969;
-}
-
-div.center {
-	margin-left: auto;
-	margin-right: auto;
-	width: 8em;
-}
-
-#main
-{
-padding: 20px;
-background-color: #ffffff;
-border-radius: 0 4px 4px 4px;
 }
