--- a/eta_carinae.css
+++ b/eta_carinae.css
@@ -1,6 +1,6 @@
 body
 {
 font: "Trebuchet MS", Verdana, sans-serif;
-background-color: #5c87b2;
-color: #696969;
+background-color: #000000;
+color: #ffffff;
 }
