--- a/sppsim/webgl.css
+++ b/sppsim/webgl.css
@@ -6,10 +6,8 @@ body {
 			
 div.webgl {
 	margin: auto;
-	width: 100%;
-	height: 100%;
-	max-width: 1000px;
-	max-height: 800px;
+	width: 1000px;
+	height: 800px;
 	text-align: center;
 	border: 5px #675C56;
 }
