Added dom element offset to mouse coordinates for object picking.

--- a/tradesim/webgl.css
+++ b/tradesim/webgl.css
@@ -5,11 +5,10 @@ body {
 }
 			
 div.webgl {
-	margin:auto;
 	width: 1000px;
 	height: 800px;
-	text-align:center;
-	border:5px #675C56;
+	position: static;
+	border:5px solid black;
 }
 
 p {
