--- a/webgl.css
+++ b/webgl.css
@@ -2,6 +2,9 @@ body {
 	background-color:#E9DCCC;
 	font-family: 'Lora', serif;
 	font-weight: 400;
+	margin: 0px; 
+	padding: 0px; 
+	border: 0px;
 }
 
 div.centerColumn {
@@ -12,6 +15,9 @@ div.centerColumn {
 }
 
 div.webgl {
+	border-style: solid;
+    border-width: 5px;
+	border-color: #FFFFFF;
 	background-color:#FF0000;
 	margin-left: 10%;
 	width: 80%;
