--- a/webgl.css
+++ b/webgl.css
@@ -11,7 +11,7 @@ div.centerColumn {
 	background-color:#F3EDDD;
 	margin-left: 20%;
 	width: 60%;
-	height: 100%;
+	height: 100vh;
 }
 
 div.webgl {
