--- a/webgl.css
+++ b/webgl.css
@@ -1,29 +1,44 @@
 body {
 	background-color:#E9DCCC;
-	font-family: 'Lora', serif;
-	font-weight: 400;
-	margin: 0px; 
-	padding: 0px; 
-	border: 0px;
+	font-family:'Georgia', serif;
+	margin:0px;
 }
 
 div.centerColumn {
 	background-color:#F3EDDD;
-	margin-left: 20%;
-	width: 60%;
-	height: 100vh;
+	margin-left:20%;
+	margin-right:20%;
+	width:50%;
+	height:100vh;
+	padding-left:5%;
+	padding-right:5%;
+	border-left:solid 1px #666666;
+    border-right:solid 1px #666666;
 }
 
 div.webgl {
-	border-style: solid;
-    border-width: 5px;
-	border-color: #FFFFFF;
-	background-color:#FF0000;
-	margin-left: 10%;
-	width: 80%;
-	height: 600px;
+	border-style:solid;
+    border-width:5px;
+	border-color:#FFFFFF;
+	background-color:#000000;
+	margin-left:10%;
+	margin-right:10%;
+	width:80%;
+	height:600px;
+}
+
+h1 {
+	margin-top:0px;
+	padding-top:20px;
+	padding-bottom:20px;
+	text-align:center;
+	border-bottom:solid 1px #666666;
+	color:#666666;
 }
 
 p {
 	text-align:center;
+	color:#666666;
+	border-bottom:solid 1px #666666;
+	padding-bottom:20px;
 }
