--- a/webgl.css
+++ b/webgl.css
@@ -1,7 +1,26 @@
 body {
-	background-color:#E9DCCC;
+	background-color:#c44130;
 	font-family:'Georgia', serif;
 	margin:0px;
+}
+
+p {
+	color: #666666;
+}
+
+h3 {
+	color: #666666;
+}
+
+div.webgl {
+	border-style:solid;
+    border-width:5px;
+	border-color:#c44130;
+	background-color:#000000;
+	margin-left:0%;
+	margin-right:0%;
+	width:100%;
+	height:600px;
 }
 
 div.centerColumn {
@@ -16,30 +35,18 @@ div.centerColumn {
     border-right:solid 1px #666666;
 }
 
-div.webgl {
-	border-style:solid;
-    border-width:5px;
-	border-color:#FFFFFF;
-	background-color:#000000;
-	margin-left:10%;
-	margin-right:10%;
-	width:80%;
-	height:600px;
-}
-
 h1.centerColumn {
 	margin-top:0px;
 	padding-top:20px;
 	padding-bottom:20px;
 	text-align:center;
-	border-bottom:solid 1px #666666;
+	border-bottom:solid 5px #c44130;
 	color:#666666;
 }
 
 p.centerColumn {
 	text-align:center;
-	color:#666666;
-	border-bottom:solid 1px #666666;
+	border-bottom:solid 5px #c44130;
 	padding-bottom:20px;
 }
 
@@ -82,12 +89,8 @@ ul.grid li a img {
 
 ul.grid li h3 {
 	margin: 0 0 5px;
-}
-
-ul.grid li p {
-	font-size: .9em;
-	line-height: 1.5em;
-	color: #999;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 ul.grid.columns-1 li {
