SPP updated to use new project code. HTML/CSS changes.

--- a/webgl.css
+++ b/webgl.css
@@ -31,19 +31,22 @@ div.topBar {
 }
 
 div.titleBar {
-	margin-left:20%;
-	margin-right:20%;
-	padding-left:1em;
-	padding-right:1em;
-	padding-top:0.25em;
-	padding-bottom:0.25em;
-	width:50%;
+	margin-left:21%;
+	margin-right:21%;
+	width:58%;
 }
 
-h1.titleBar {
+h1.name {
+	display:inline;
 	color: #5B474E;
-	margin-top:0px;
-	margin-bottom:0px;
+	margin: 0px;
+}
+
+a.projects {
+	display:inline;
+	float:right;
+	color: #5B474E;
+	margin:0px;
 }
 
 div.centerColumn {
@@ -70,6 +73,8 @@ div.centerColumn h1 {
 div.centerColumn p {
 	text-align:center;
 	border-bottom:solid 5px #c44130;
+	margin-top:0px;
+	padding-top:1em;
 	padding-bottom:1em;
 }
 
