--- a/webgl.css
+++ b/webgl.css
@@ -1,7 +1,34 @@
+html { font-size: 62.5%; }
+
+body { font-size: 14px; font-size: 1.4rem; } /* =14px */
+
+h1   { font-size: 24px; font-size: 2.0rem; } /* =24px */
+
+h3 { font-size: 11.7px; font-size: 1.17em; }
+
+a { font-size: 16px; font-size: 1.17em; }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
+
 body {
 	background-color:#c44130;
 	font-family:'Georgia', serif;
 	margin:0px;
+	height:100%;
 }
 
 p {
@@ -28,25 +55,34 @@ div.topBar {
 	width: 100%;
 	height: auto;
 	border-bottom:solid 1px #666666;
+	overflow:hidden;
 }
 
 div.titleBar {
+	display:inline;
+	float:left;
 	margin-left:21%;
-	margin-right:21%;
-	width:58%;
+	width:29%;
 }
 
-h1.name {
-	display:inline;
-	color: #5B474E;
-	margin: 0px;
-}
-
-a.projects {
-	display:inline;
-	float:right;
+div.titleBar h3 {
 	color: #5B474E;
 	margin:0px;
+	padding:0px;
+}
+
+div.navBar {
+	display:inline;
+	float:right;
+	width:29%;
+	margin-right:21%;
+	text-align:right;
+}
+
+div.navBar a {
+	color: #5B474E;
+	margin:0px;
+	padding:0px;
 }
 
 div.centerColumn {
@@ -54,7 +90,7 @@ div.centerColumn {
 	margin-left:20%;
 	margin-right:20%;
 	width:50%;
-	height:100vh;
+	height:100%;
 	padding-left:5%;
 	padding-right:5%;
 	border-left:solid 1px #666666;
